--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,32 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 40px;
+  float: left;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 40px;
+  padding: 10px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .App-intro {
   font-size: large;
+}
+
+h1 {
+  float: left;
+}
+
+select {
+  font-size: 1.2em;
+  margin-right: 20px;
+  float: right;
 }
 
 @keyframes App-logo-spin {
